# qtdemo

./: .gitignore  CMakeLists.txt  PROJECT_PROGRESS.md  README.md  TASK.md  agent.md
docs/: CODEX_TASKS.md  QTHMI_FULL_CONTEXT.md
qml/: AlarmPanel.qml  CommunicationStatsPanel.qml  ConfigPanel.qml  Main.qml  TelemetrySummaryPanel.qml  TrendPanel.qml
src/: alarmevaluator.cpp  alarmevaluator.h  alarmhistorymodel.cpp  alarmhistorymodel.h  alarmlogmodel.cpp  alarmlogmodel.h  alarmrecord.h  alarmrecorddata.h  backend.cpp  backend.h  backend_backgroundtasks.cpp  backgroundtaskmanager.cpp  backgroundtaskmanager.h  backgroundtasktypes.h  communicationstats.h  configmanager.cpp  configmanager.h  curveplotprovider.cpp  curveplotprovider.h  databaseworker.cpp  databaseworker.h  logger.cpp  logger.h  main.cpp  modbusprotocol.cpp  modbusprotocol.h  serialportworker.cpp  serialportworker.h  telemetryrecord.h
src/tasks/: alarmcsvexporttask.cpp  alarmcsvexporttask.h  alarmhistoryquerytask.cpp  alarmhistoryquerytask.h  alarmstatstask.cpp  alarmstatstask.h  tasksqlconnection.h
